--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
-Welcome to my portfolio!
+<html>
+  <head>
+    <title>My Homepage</title>
+  </head>
+  
+  <body>
+    <h1>Welcome to my portfolio!</h1>
+    
+  </body>
+</html>
 
 ----------------------------
 http://wdrummond.github.io
