--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <p>My name is Wyatt Drummond. I am currently a student at Dixie State University, studying software development.
 I have been studying software developent for about 2 years now and I think it would be cool if I could work with you guys!</p>
 
-<img src="platformgame.png.jpg" alt="Mountain View" style="width:304px;height:228px;">
+<img src="platformgame.png" alt="Platform Game" style="width:304px;height:228px;">
         
 <h1>
 <a id="wdrummondgithubio" class="anchor" href="#wdrummondgithubio" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>wdrummond.github.io</h1>
