--- a/index.html
+++ b/index.html
@@ -36,8 +36,12 @@
 
 <p>My name is Wyatt Drummond. I am currently a student at Dixie State University, studying software development.
 I have been studying software developent for about 2 years now and I think it would be cool if I could work with you guys!</p>
+     
+<p>Below are a few pictures of projects and programs that I've written, you can also see all the code on my GitHub page!</p>
 
+        <h2>Python Platform Game</h2>
 <img src="/images/platformgame.png" alt="Platform Game" style="width:479px;height:479px;">
+        <p>a simple game that lets you run around and collect coins, climb through a dungeon, and throw firballs at enemies!</p>
         
 <h1>
 <a id="wdrummondgithubio" class="anchor" href="#wdrummondgithubio" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>wdrummond.github.io</h1>
