--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@ I have been studying software developent for about 2 years now and I think it wo
 
         
         <h2>Games Database Web App</h2>
-<img src="/images/GamesDatabaseLogIn.png" alt="Web App Log In Screen" style="width:479px;height:479px;"> <img src="/images/GamesDatabase.png" alt="Web App Admin Screen" style="width:479px;height:479px;">
+<img src="/images/GamesDatabaseLogIn.png" alt="Web App Log In Screen" style="width:679px;height:479px;"> 
+<img src="/images/GamesDatabase.png" alt="Web App Admin Screen" style="width:479px;height:679px;">
         <h2>Python Platform Game</h2>
 <img src="/images/platformgame.png" alt="Platform Game" style="width:479px;height:479px;">
         <p>a simple game that lets you run around and collect coins, climb through a dungeon, and throw firballs at enemies!</p>
