--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <a id="about-me" class="anchor" href="#about-me" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>About Me:</h2>
 
 <p>My name is Wyatt Drummond. I am currently a student at Dixie State University, studying software development.
-I have been studying software developent for about 2 years, now and I think it would be cool if I could work with you guys!</p>
+I have been studying software developent for about 2 years now, and I think it would be cool if I could work with you guys!</p>
      
 <p>Below are a few pictures of projects and programs that I've written, you can also see all the code on my GitHub page!</p>
 
