--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h1>
 <a id="welcome" class="anchor" href="#welcome" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome!</h1>
 
-<p>This is my online portfolio! Made Specifically for you boys at Blizzard!</p>
+<p>This is my online portfolio, made Specifically for you boys at Blizzard!</p>
 
 <h2>
 <a id="about-me" class="anchor" href="#about-me" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>About Me:</h2>
@@ -45,7 +45,7 @@ I have been studying software developent for about 2 years now, and I think it w
 <img src="/images/GamesDatabase.png" alt="Web App Admin Screen" style="width:879px;height:679px;">
         <h2>Python Platform Game</h2>
 <img src="/images/platformgame.png" alt="Platform Game" style="width:479px;height:479px;">
-        <p>a simple game that lets you run around and collect coins, climb through a dungeon, and throw firballs at enemies!</p>
+        <p>A simple game that lets you run around and collect coins, climb through a dungeon, and throw firballs at enemies!</p>
         
 <h1>
 <a id="wdrummondgithubio" class="anchor" href="#wdrummondgithubio" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>wdrummond.github.io</h1>
