--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ I have been studying software developent for about 2 years now, and I think it w
 <img src="/images/GamesDatabase.png" alt="Web App Admin Screen" style="width:879px;height:679px;">
         <h2>Python Platform Game</h2>
 <img src="/images/platformgame.png" alt="Platform Game" style="width:479px;height:479px;">
-        <p>A simple game that lets you run around and collect coins, climb through a dungeon, and throw firballs at enemies!</p>
+        <p>This is a simple game that lets you run around and collect coins, climb through a dungeon, and throw fireballs at enemies!</p>
         
 <h1>
 <a id="wdrummondgithubio" class="anchor" href="#wdrummondgithubio" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>wdrummond.github.io</h1>
