--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@ I have been studying software developent for about 2 years now, and I think it w
         
         <h2>Games Database Web App</h2>
 <img src="/images/GamesDatabaseLogIn.png" alt="Web App Log In Screen" style="width:879px;height:679px;"> 
+        <p>This is a web app written with HTML, CSS, Javascript, and SQLite. It utilzes basic protocols such as CORS and REST. Once logged in you are redirected to an admin page where you can create, update and delete game entires.</p>
+        
         <h2>Python Platform Game</h2>
 <img src="/images/platformgame.png" alt="Platform Game" style="width:479px;height:479px;">
         <p>This is a simple game that lets you run around and collect coins, climb through a dungeon, and throw fireballs at enemies!</p>
