--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@ I have been studying software developent for about 2 years now, and I think it w
 <img src="/images/platformgame.png" alt="Platform Game" style="width:479px;height:479px;">
         <p>This is a simple game that lets you run around and collect coins, climb through a dungeon, and throw fireballs at enemies!</p>
         
+        <h2>Free Cell</h2>
+<img src="/images/FreeCellC++.png" alt="Free Cell" style="width:479px;height:479px;">
+        <p>The game of Free Cell, written in C++.</p>
+        
+        <h2>Postfix Calculator</h2>
+<img src="/images/PostFixCalculator.png" alt="PostFix Calculator" style="width:479px;height:479px;">
+        <p>This is a calculator for those pesky postfix equations. I wrote this in Java using NetBeans.</p>
 <h1>
 <a id="wdrummondgithubio" class="anchor" href="#wdrummondgithubio" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>wdrummond.github.io</h1>
       </section>
