--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h1>
 <a id="welcome" class="anchor" href="#welcome" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome!</h1>
 
-<p>This is my online portfolio made Specifically for you boys at Blizzard!</p>
+<p>This is my online portfolio made specifically for you boys at Blizzard!</p>
 
 <h2>
 <a id="about-me" class="anchor" href="#about-me" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>About Me:</h2>
