--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ I have been studying software developent for about 2 years now, and I think it w
         
         <h2>YouTube Portal App</h2>
 <img src="/images/YouTubePortal.png" alt="YouTube Portal" style="width:325px;height:579px;">
-        <p>This is an app I wrote for my swift class. It uses YouTubes API to allow users to wearch for channels and videos.</p>
+        <p>This is an app I wrote for my swift class. It uses YouTubes API to allow users to search for channels and videos.</p>
       
 <h1>
 <a id="wdrummondgithubio" class="anchor" href="#wdrummondgithubio" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>wdrummond.github.io</h1>
