--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <p>My name is Wyatt Drummond. I am currently a student at Dixie State University, studying software development.
 I have been studying software developent for about 2 years now, and I think it would be cool if I could work with you guys!</p>
      
-<p>Below are a few pictures of projects and programs that I've written. You can also see all the code on my GitHub page!</p>
+<p>Below are a few pictures of projects and programs that I've written. You can also see all the code for these projects and more on my GitHub page!</p>
 
         
         <h2>Games Database Web App</h2>
