--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
         <h1>
 <a id="welcome" class="anchor" href="#welcome" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome!</h1>
 
-<p>This is my online portfolio made specifically for you boys at Blizzard!</p>
+<p>This is my online portfolio! It showcases some of the projects I have made in school and on my own!</p>
 
 <h2>
 <a id="about-me" class="anchor" href="#about-me" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>About Me:</h2>
 
 <p>My name is Wyatt Drummond. I am currently a student at Dixie State University, studying software development.
-I have been studying software developent for about 2 years now, and I think it would be cool if I could work with you guys!</p>
+I have been studying software development for about 2 years and i lpan to graduate at the end of 2017!</p>
      
 <p>Below are a few pictures of projects and programs that I've written. You can also see all the code for these projects and more on my GitHub page!</p>
 
