--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <a id="about-me" class="anchor" href="#about-me" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>About Me:</h2>
 
 <p>My name is Wyatt Drummond. I am currently a student at Dixie State University, studying software development.
-I have been studying software development for about 2 years and i lpan to graduate at the end of 2017!</p>
+I have been studying software development for about 2 years and I plan to graduate at the end of 2017!</p>
      
 <p>Below are a few pictures of projects and programs that I've written. You can also see all the code for these projects and more on my GitHub page!</p>
 
